Opened 15 years ago
Closed 15 years ago
#4965 closed bug (fixed)
Patch: ppc missing symbols and makebootable compile failure
Reported by: | kallisti5 | Owned by: | nobody |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | - General | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | PowerPC |
Description
Missing symbols:
$ readelf -a kernel_ppc | grep UND 0: 00000000 0 NOTYPE LOCAL DEFAULT UND 1657: 00000000 0 NOTYPE GLOBAL DEFAULT UND Z22ppc_kernel_thread_roo 2953: 00000000 0 NOTYPE GLOBAL DEFAULT UND _Z25ppc_switch_stack_and_
PPC compile issue.
# generated/objects/linux/x86/release/tools/makebootable/platform/openfirmware/makebootable.o:(.eh_frame+0x12): undefined reference to `__gxx_personality_v0' # collect2: ld returned 1 exit status
Attachments (1)
Change History (4)
by , 15 years ago
Attachment: | ppc-extern-fix.patch added |
---|
comment:2 by , 15 years ago
Platform: | All → PowerPC |
---|
comment:3 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed the makebootable build in hrev34234.
Note:
See TracTickets
for help on using tickets.
Patch on hrev34040, please comment kallisti5 or Alexander von Gluck on the checkin so I can track PPC fixes!