Force C linkage on those two, fixes them being undefined after the .c to .cpp rename. Fixes part of #4965.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34042 a95241bf-73f2-0310-859d-f6bbb57e9c96